Fix: Refactor constructors to package-private visibility and improve validation in domain classes