@@ -1,7 +1,6 @@
 package com.jaapec.tenant.shared.domain;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import com.jaapec.tenant.shared.domain.bus.event.DomainEvent;
@@ -11,10 +10,8 @@ public abstract class AggregateRoot {
 	private List<DomainEvent> domainEvents = new ArrayList<>();
 
 	public final List<DomainEvent> pullDomainEvents() {
-		List<DomainEvent> events = domainEvents;
-
-		domainEvents = Collections.emptyList();
-
+		List<DomainEvent> events = List.copyOf(domainEvents);
+		domainEvents = new ArrayList<>();
 		return events;
 	}
 
